
syntax = "proto3";

option go_package = "./proto";

service Api {
    rpc UserRegister (UserRegisterRequest) returns (UserRegisterResponse) {}
    rpc UserLogin (UserLoginRequest) returns (UserLoginResponse) {}
}
  
message UserRegisterRequest {
    string username = 1;
    string password = 2;
}
  
message UserRegisterResponse {
    string status = 1;
    string timestamp = 2;
    string id = 3;
    string password = 4;
    string username = 5;
}
 
message UserLoginRequest {
    string username = 1;
    string password = 2;
}

message UserLoginResponse {
    string status = 1;
    string timestamp = 2;
    string id = 3;
    string token = 4;
    string username = 5;
}